# vectordb

./: .dockerignore  .gitignore  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_GAP_ANALYSIS.md  CONTRIBUTING.md  DEMO_PLAN.md  DISTRIBUTED_ARCHITECTURE.md  DISTRIBUTED_DEPLOYMENT.md  DISTRIBUTED_IMPLEMENTATION_SUMMARY.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  MULTITENANT_SECURITY_TEST_RESULTS.md  NEXT_PRIORITIES.md  PHASE2_IMPLEMENTATION.md  PRODUCTION_FEATURES.md  QUICKSTART.md  README.md  api_key_rotation.go  api_key_rotation_test.go  audit.go  audit_test.go  auth.go  baseline_bench.txt  benchmark_test.go  cmd_gentoken.go  collection.go  collection_handlers.go  collection_http.go  collection_http_test.go  coordinator_server.go  distributed.go  distributed_demo.go  docker-compose.yml  embedder_mode.go  encryption.go  encryption_test.go  extraction_http.go  failover.go  (+41 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: inject.js  lib.rs  main.rs
sdk/python/: README.md  pyproject.toml
sdk/python/deepdata/: __init__.py  _utils.py  async_client.py  client.py  errors.py  models.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py  test_errors.py  test_integration.py  test_models.py
tools/deola_job/: pyproject.toml
tools/deola_job/jobhunter/: config.py  db.py  filter.py  llm.py  main.py  resume.py  scraper.py  tailor.py
tools/deola_job/jobhunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vdb-test-suite/: .gitignore  Makefile  pyproject.toml
vdb-test-suite/bench/: ann_param_sweep.py  ann_recall.py  filter_bench.py  ingest_bench.py  mixed_workload_bench.py  realistic_app_bench.py
vdb-test-suite/configs/: deepdata.yaml  default.yaml  realistic_workload.yaml
vdb-test-suite/datasets/manifests/: code-1536-realistic.yaml  glove-100d-full.yaml  glove-100d.yaml  glove-50d.yaml  sift-100k.yaml  sift-10k.yaml  text-768-realistic.yaml
vdb-test-suite/framework/: assertions.py  config.py  datasets.py  disk.py  envinfo.py  memory.py  metrics.py  report.py  runner.py  timeutil.py  workload.py
vdb-test-suite/reports/: compare_runs.py  render_html.py  render_markdown.py  thresholds.py
vdb-test-suite/soak/: soak_crash_recovery.py  soak_memory_drift.py  soak_mixed_workload.py  soak_restart_under_load.py
vdb-test-suite/tests/: conftest.py  test_api_validation.py  test_collection_lifecycle.py  test_concurrent_semantics.py  test_crud_ids.py  test_filtering.py  test_multi_collection.py  test_multi_tenant.py  test_persistence.py  test_restart_recovery.py  test_search_correctness.py
(+481 files in other folders)
