[project]
name = "vdb-test-suite"
version = "0.1.0"
description = "Benchmarking and correctness harness for vector databases"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "httpx>=0.27",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "psutil>=5.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["framework*", "reports*"]
