[package]
name = "deepdata-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "deepdata_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
