[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepdata"
version = "0.1.0"
description = "Python SDK for the DeepData vector database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Neumenon" },
]
keywords = ["vector", "database", "embeddings", "search", "deepdata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["deepdata"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
